// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiTableFooterCell align defaults to left 1`] = `
<table>
  <tfoot>
    <tr>
      <td
        class="euiTableFooterCell emotion-euiTableFooterCell-hasBackground"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-truncateText"
        >
          <span
            class="euiTableCellContent__text"
          />
        </div>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`EuiTableFooterCell align renders center when specified 1`] = `
<table>
  <tfoot>
    <tr>
      <td
        class="euiTableFooterCell emotion-euiTableFooterCell-hasBackground"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-center-truncateText"
        >
          <span
            class="euiTableCellContent__text"
          />
        </div>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`EuiTableFooterCell align renders right when specified 1`] = `
<table>
  <tfoot>
    <tr>
      <td
        class="euiTableFooterCell emotion-euiTableFooterCell-hasBackground"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-right-truncateText"
        >
          <span
            class="euiTableCellContent__text"
          />
        </div>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`EuiTableFooterCell is rendered 1`] = `
<table>
  <tfoot>
    <tr>
      <td
        aria-label="aria-label"
        class="euiTableFooterCell testClass1 testClass2 emotion-euiTableFooterCell-hasBackground-euiTestCss"
        data-test-subj="test subject string"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-truncateText"
        >
          <span
            class="euiTableCellContent__text"
          >
            children
          </span>
        </div>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`EuiTableFooterCell width and style accepts style attribute 1`] = `
<table>
  <tfoot>
    <tr>
      <td
        class="euiTableFooterCell emotion-euiTableFooterCell-hasBackground"
        style="width: 20%;"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-truncateText"
        >
          <span
            class="euiTableCellContent__text"
          >
            Test
          </span>
        </div>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`EuiTableFooterCell width and style accepts width attribute 1`] = `
<table>
  <tfoot>
    <tr>
      <td
        class="euiTableFooterCell emotion-euiTableFooterCell-hasBackground"
        style="width: 10%;"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-truncateText"
        >
          <span
            class="euiTableCellContent__text"
          >
            Test
          </span>
        </div>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`EuiTableFooterCell width and style accepts width attribute as number 1`] = `
<table>
  <tfoot>
    <tr>
      <td
        class="euiTableFooterCell emotion-euiTableFooterCell-hasBackground"
        style="width: 100px;"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-truncateText"
        >
          <span
            class="euiTableCellContent__text"
          >
            Test
          </span>
        </div>
      </td>
    </tr>
  </tfoot>
</table>
`;

exports[`EuiTableFooterCell width and style resolves style and width attribute 1`] = `
<table>
  <tfoot>
    <tr>
      <td
        class="euiTableFooterCell emotion-euiTableFooterCell-hasBackground"
        style="width: 10%;"
      >
        <div
          class="euiTableCellContent emotion-euiTableCellContent-truncateText"
        >
          <span
            class="euiTableCellContent__text"
          >
            Test
          </span>
        </div>
      </td>
    </tr>
  </tfoot>
</table>
`;
